uvicorn.out
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/Volumes/PortableSSD/Azune/stock/Auto-GPT-Stock/venv/lib/python3.13/site-packages/uvicorn/__main__.py", line 4, in <module>
    uvicorn.main()
    ~~~~~~~~~~~~^^
  File "/Volumes/PortableSSD/Azune/stock/Auto-GPT-Stock/venv/lib/python3.13/site-packages/click/core.py", line 1442, in __call__
    return self.main(*args, **kwargs)
           ~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "/Volumes/PortableSSD/Azune/stock/Auto-GPT-Stock/venv/lib/python3.13/site-packages/click/core.py", line 1363, in main
    rv = self.invoke(ctx)
  File "/Volumes/PortableSSD/Azune/stock/Auto-GPT-Stock/venv/lib/python3.13/site-packages/click/core.py", line 1226, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Volumes/PortableSSD/Azune/stock/Auto-GPT-Stock/venv/lib/python3.13/site-packages/click/core.py", line 794, in invoke
    return callback(*args, **kwargs)
  File "/Volumes/PortableSSD/Azune/stock/Auto-GPT-Stock/venv/lib/python3.13/site-packages/uvicorn/main.py", line 412, in main
    run(
    ~~~^
        app,
        ^^^^
    ...<45 lines>...
        h11_max_incomplete_event_size=h11_max_incomplete_event_size,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/Volumes/PortableSSD/Azune/stock/Auto-GPT-Stock/venv/lib/python3.13/site-packages/uvicorn/main.py", line 579, in run
    server.run()
    ~~~~~~~~~~^^
  File "/Volumes/PortableSSD/Azune/stock/Auto-GPT-Stock/venv/lib/python3.13/site-packages/uvicorn/server.py", line 65, in run
    return asyncio.run(self.serve(sockets=sockets))
           ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/homebrew/Caskroom/miniconda/base/lib/python3.13/asyncio/runners.py", line 195, in run
    return runner.run(main)
           ~~~~~~~~~~^^^^^^
  File "/opt/homebrew/Caskroom/miniconda/base/lib/python3.13/asyncio/runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "uvloop/loop.pyx", line 1518, in uvloop.loop.Loop.run_until_complete
  File "/Volumes/PortableSSD/Azune/stock/Auto-GPT-Stock/venv/lib/python3.13/site-packages/uvicorn/server.py", line 69, in serve
    await self._serve(sockets)
  File "/Volumes/PortableSSD/Azune/stock/Auto-GPT-Stock/venv/lib/python3.13/site-packages/uvicorn/server.py", line 76, in _serve
    config.load()
    ~~~~~~~~~~~^^
  File "/Volumes/PortableSSD/Azune/stock/Auto-GPT-Stock/venv/lib/python3.13/site-packages/uvicorn/config.py", line 434, in load
    self.loaded_app = import_from_string(self.app)
                      ~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "/Volumes/PortableSSD/Azune/stock/Auto-GPT-Stock/venv/lib/python3.13/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
  File "/opt/homebrew/Caskroom/miniconda/base/lib/python3.13/importlib/__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 1022, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/Volumes/PortableSSD/Azune/stock/Auto-GPT-Stock/backend/app.py", line 387
    row = spot[spot["代码"].astype(str) == symbol.lower().replace("sh",""").replace("sz","")]
                                                                                          ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '(' on line 335
